# -PROTOTYPE-rtx-remix-plugin

./: .gitignore  CMakeLists.txt  README.md
docs/: GUIDE.md
src/: d3d9_proxy.cpp  dllmain.cpp  prototype_hooks.cpp  prototype_rtx.h
